--- a/css/main.css
+++ b/css/main.css
@@ -1625,6 +1625,413 @@
   border-bottom: 1px solid #e6e6e6;
 }
 
+.all_books {
+  padding: 30px 29px 38px 29px !important;
+  background-color: #fff;
+}
+
+.all_books__head {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 35px;
+}
+
+.all_books__title h2 {
+  font-weight: bold;
+  font-family: ArialMTBold, sans-serif;
+  font-size: 22px;
+}
+
+.all_books__nuv ul {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.all_books__nuv ul li:not(:last-of-type) {
+  margin-right: 29px;
+}
+
+.all_books__nuv ul li a {
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+  color: #001689;
+}
+
+.all_books__nuv ul li a.all_books__nuv_active {
+  text-decoration: none;
+  color: #c0c0c0;
+}
+
+.all_books__filter_flex {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 30px;
+}
+
+.all_books__add_books button {
+  font-family: TrebuchetMS, sans-serif;
+  font-size: 14px;
+  color: #001689;
+  padding: 11px 26px;
+  border: 2px solid #001689;
+  -webkit-transition: all .25s ease;
+  -o-transition: all .25s ease;
+  transition: all .25s ease;
+}
+
+.all_books__add_books button:hover {
+  color: #fff;
+  background-color: #001689;
+}
+
+.all_books__filter .status_select {
+  width: 200px;
+  height: 37px;
+}
+
+.all_books__filter .status_select .placeholder_select {
+  padding: 6px 12px;
+  font-family: ArialMTBold, sans-serif;
+  font-weight: bold;
+  font-size: 14px;
+  color: #cc003d;
+}
+
+.all_books__filter .status_select .placeholder_select .fixed_placeholder {
+  display: block;
+  font-family: ArialMT, sans-serif;
+  font-weight: normal;
+  font-size: 11px;
+  color: #a4a4bb;
+}
+
+.all_books__filter .status_select .select_items {
+  bottom: 4px;
+}
+
+.all_books__filter .status_select .select_items li {
+  padding-top: 9px;
+}
+
+.all_books__filter .status_select .select_items li:first-child {
+  padding-top: 13px;
+}
+
+.all_books__filter .status_select .select_items li:last-child {
+  padding-bottom: 13px;
+}
+
+.all_books__item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.all_books__item:not(:last-of-type) {
+  margin-bottom: 46px;
+}
+
+.all_books__item_thumb {
+  min-width: 180px;
+  height: 140px;
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
+  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  margin-right: 31px;
+}
+
+.all_books__item_thumb_icon {
+  width: 50px;
+  height: 50px;
+  -webkit-box-shadow: -4px 7px 10px rgba(0, 0, 0, 0.15);
+          box-shadow: -4px 7px 10px rgba(0, 0, 0, 0.15);
+  -webkit-border-radius: 50%;
+          border-radius: 50%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  top: 6px;
+  right: 7px;
+}
+
+.all_books__item_thumb_label {
+  position: absolute;
+  bottom: 10px;
+  left: 9px;
+  padding: 9px 12px;
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
+  font-family: ArialMT, sans-serif;
+  font-size: 12px;
+  color: #ffffff;
+}
+
+.all_books__item_thumb .bg_orange {
+  background-color: #f5813b;
+}
+
+.all_books__item_thumb .bg_indigo {
+  background-color: #001689;
+}
+
+.all_books__item_thumb .bg_green {
+  background-color: #11ab2e;
+}
+
+.all_books__item_content {
+  width: 690px;
+}
+
+.all_books__item_content > h4 {
+  font-family: ArialMTBold, sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 18px;
+  margin-bottom: 5px;
+}
+
+.all_books__item_content > h4 span {
+  display: block;
+  font-weight: normal;
+  font-family: ArialMT, sans-serif;
+  font-size: 12px;
+  color: #a4a4bb;
+}
+
+.all_books__item_content ul {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  margin-bottom: 6px;
+}
+
+.all_books__item_content ul li {
+  font-family: ArialMT, sans-serif;
+  font-size: 12px;
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
+  background-color: #eeeeee;
+  padding: 9px 12px;
+  margin-bottom: 9px;
+}
+
+.all_books__item_content ul li:not(:last-of-type) {
+  margin-right: 10px;
+}
+
+.all_books__item_content > p {
+  font-family: ArialMT, sans-serif;
+  font-size: 12px;
+  color: #a4a4bb;
+}
+
+.all_books__item_content > p a {
+  text-decoration: none;
+  color: #000;
+}
+
+.all_books__item_filters {
+  margin-left: auto;
+}
+
+.all_books__item_filter:not(:last-of-type) {
+  margin-bottom: 10px;
+}
+
+.all_books__item_filter .datapicker_wrp {
+  position: relative;
+}
+
+.all_books__item_filter .datapicker_wrp:before {
+  content: '';
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  display: block;
+  width: 0;
+  border-top: 8px solid #cc003d;
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  position: absolute;
+  right: 8px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.all_books__item_filter .datapicker_wrp_active:before {
+  border-top: none;
+  border-bottom: 8px solid #cc003d;
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+}
+
+.all_books__item_filter p {
+  font-family: ArialMT, sans-serif;
+  font-size: 11px;
+  color: #a4a4bb;
+  margin-bottom: 5px;
+}
+
+.all_books__item_filter input {
+  border: none;
+  width: 140px;
+  height: 28px;
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
+  border: 1px solid #e6e6e6;
+  background-color: #ffffff;
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+  color: #000000;
+  padding: 8px 11px;
+}
+
+.pick-h,
+.pick-y,
+.pick-l,
+.pick-btns {
+  display: none;
+}
+
+div.datedropper.picker-lg {
+  width: 227px !important;
+}
+
+.picker {
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  min-height: 182px;
+  -webkit-border-radius: 3px;
+          border-radius: 3px;
+  border: 1px solid #e6e6e6;
+  background-color: #ffffff;
+  padding: 14px 13px;
+}
+
+.picker .pick-m {
+  font-family: ArialMT, sans-serif;
+  font-size: 14px !important;
+  color: #000000;
+  opacity: 0.5;
+  height: 25px !important;
+  line-height: 25px !important;
+  margin: 0 6px !important;
+}
+
+.picker .pick-m li {
+  text-align: left !important;
+}
+
+.picker .pick-m .pick-arw {
+  opacity: 1 !important;
+  width: 5px !important;
+  height: 10px !important;
+  top: 50% !important;
+  overflow: normal !important;
+  -webkit-transform: translateY(-50%) !important;
+      -ms-transform: translateY(-50%) !important;
+          transform: translateY(-50%) !important;
+  font-size: 9px;
+  -webkit-background-size: auto auto !important;
+          background-size: auto !important;
+}
+
+.picker .pick-m .pick-arw i {
+  display: none !important;
+}
+
+.picker .pick-m .pick-arw-l {
+  right: 19px;
+  left: auto !important;
+  background-image: url(../img/icons/arrow-point-to-left.png);
+}
+
+.picker .pick-m .pick-arw-r {
+  background-image: url(../img/icons/arrow-point-to-right.png);
+}
+
+.picker .pick-lg-h,
+.picker .pick-lg-b {
+  padding: 0 !important;
+}
+
+.picker .pick-lg-h li {
+  width: 28px !important;
+  height: auto !important;
+  line-height: auto !important;
+  opacity: 0.5;
+  font-family: ArialMT, sans-serif;
+  color: #000000;
+}
+
+.picker .pick-lg-b li {
+  width: 28px !important;
+  height: 28px !important;
+  line-height: 28px !important;
+  font-family: ArialMT, sans-serif;
+  font-size: 14px;
+  color: #000000;
+}
+
+.picker .pick-lg-b li:before {
+  background-color: #cc003d;
+  width: 28px !important;
+  height: 28px !important;
+}
+
+.picker .pick-lg-b li.pick-sl {
+  color: #fff;
+  font-size: 14px !important;
+}
+
 /*========================
 	@Media запросы
 	@mixin =======================*/
