--- a/sass/main.sass
+++ b/sass/main.sass
@@ -924,5 +924,257 @@
 							&:not(:last-of-type)
 								border-bottom: 1px solid #e6e6e6
 
+.all_books
+	padding: 30px 29px 38px 29px !important
+	background-color: #fff
+	&__head
+		display: flex
+		align-items: center
+		justify-content: space-between
+		margin-bottom: 35px
+	&__title
+		h2
+			font-weight: bold
+			font-family: ArialMTBold, sans-serif
+			font-size: 22px
+	&__nuv
+		ul
+			display: flex
+			align-items: center
+			li
+				&:not(:last-of-type)
+					margin-right: 29px
+				a
+					font-family: ArialMT, sans-serif
+					font-size: 14px
+					color: $blue
+				a.all_books__nuv_active
+					text-decoration: none
+					color: #c0c0c0
+	&__filter_flex
+		display: flex
+		justify-content: space-between
+		align-items: center
+		margin-bottom: 30px
+	&__add_books
+		button
+			font-family: TrebuchetMS, sans-serif
+			font-size: 14px
+			color: $blue
+			padding: 11px 26px
+			border: 2px solid $blue
+			transition: all .25s ease
+			&:hover
+				color: #fff
+				background-color: $blue
+	&__filter
+		.status_select
+			width: 200px
+			height: 37px
+			.placeholder_select
+				padding: 6px 12px
+				font-family: ArialMTBold, sans-serif
+				font-weight: bold
+				font-size: 14px
+				color: #cc003d
+				.fixed_placeholder
+					display: block
+					font-family: ArialMT, sans-serif
+					font-weight: normal
+					font-size: 11px
+					color: #a4a4bb
+			.select_items
+				bottom: 4px
+				li
+					padding-top: 9px
+					&:first-child
+						padding-top: 13px
+					&:last-child
+						padding-bottom: 13px
+	&__item
+		display: flex
+		&:not(:last-of-type)
+			margin-bottom: 46px
+		&_thumb
+			min-width: 180px
+			height: 140px
+			border-radius: 3px
+			overflow: hidden
+			background-position: center
+			background-repeat: no-repeat
+			position: relative
+			margin-right: 31px
+			&_icon
+				width: 50px
+				height: 50px
+				box-shadow: -4px 7px 10px rgba(0, 0, 0, 0.15)
+				border-radius: 50%
+				display: flex
+				align-items: center
+				justify-content: center
+				position: absolute
+				top: 6px
+				right: 7px
+			&_label
+				position: absolute
+				bottom: 10px
+				left: 9px
+				padding: 9px 12px
+				border-radius: 3px
+				font-family: ArialMT, sans-serif
+				font-size: 12px
+				color: #ffffff
+			.bg_orange
+				background-color: #f5813b
+			.bg_indigo
+				background-color: $blue
+			.bg_green
+				background-color: #11ab2e
+		&_content
+			width: 690px
+			&>h4
+				font-family: ArialMTBold, sans-serif
+				font-size: 14px
+				font-weight: bold
+				line-height: 18px
+				margin-bottom: 5px
+				span
+					display: block
+					font-weight: normal
+					font-family: ArialMT, sans-serif
+					font-size: 12px
+					color: #a4a4bb
+			ul
+				display: flex
+				flex-wrap: wrap
+				margin-bottom: 6px
+				li
+					font-family: ArialMT, sans-serif
+					font-size: 12px
+					border-radius: 3px
+					background-color: #eeeeee
+					padding: 9px 12px
+					margin-bottom: 9px
+					&:not(:last-of-type)
+						margin-right: 10px
+			&>p
+				font-family: ArialMT, sans-serif
+				font-size: 12px
+				color: #a4a4bb
+				a
+					text-decoration: none
+					color: #000
+		&_filters
+			margin-left: auto
+		&_filter
+			&:not(:last-of-type)
+				margin-bottom: 10px
+			.datapicker_wrp
+				position: relative
+				&:before
+					content: ''
+					user-select: none
+					display: block
+					width: 0
+					border-top: 8px solid $red
+					border-right: 5px solid transparent
+					border-left: 5px solid transparent
+					position: absolute
+					right: 8px
+					top: 50%
+					transform: translateY(-50%)
+			.datapicker_wrp_active
+				&:before
+					border-top: none
+					border-bottom: 8px solid $red
+					border-right: 5px solid transparent
+					border-left: 5px solid transparent
+			p
+				font-family: ArialMT, sans-serif
+				font-size: 11px
+				color: #a4a4bb
+				margin-bottom: 5px
+			input
+				border: none
+				width: 140px
+				height: 28px
+				border-radius: 3px
+				border: 1px solid #e6e6e6
+				background-color: #ffffff
+				font-family: ArialMT, sans-serif
+				font-size: 14px
+				color: #000000
+				padding: 8px 11px
+
+.pick-h,
+.pick-y,
+.pick-l,
+.pick-btns,
+	display: none
+
+div.datedropper.picker-lg
+	width: 227px !important
+
+.picker
+	width: 100%
+	box-sizing: border-box
+	min-height: 182px
+	border-radius: 3px
+	border: 1px solid #e6e6e6
+	background-color: #ffffff
+	padding: 14px 13px
+	.pick-m
+		font-family: ArialMT, sans-serif
+		font-size: 14px !important
+		color: #000000
+		opacity: 0.5
+		height: 25px !important
+		line-height: 25px !important
+		margin: 0 6px !important
+		li
+			text-align: left !important
+		.pick-arw
+			opacity: 1 !important
+			width: 5px !important
+			height: 10px !important
+			top: 50% !important
+			overflow: normal !important
+			transform: translateY(-50%) !important
+			font-size: 9px
+			background-size: auto !important
+			i
+				display: none !important
+		.pick-arw-l
+			right: 19px
+			left: auto !important
+			background-image: url(../img/icons/arrow-point-to-left.png)
+		.pick-arw-r
+			background-image: url(../img/icons/arrow-point-to-right.png)
+	.pick-lg-h,
+	.pick-lg-b
+		padding: 0 !important
+	.pick-lg-h
+		li
+			width: 28px !important
+			height: auto !important
+			line-height: auto !important
+			opacity: 0.5
+			font-family: ArialMT, sans-serif
+			color: #000000
+	.pick-lg-b
+		li
+			width: 28px !important
+			height: 28px !important
+			line-height: 28px !important
+			font-family: ArialMT, sans-serif
+			font-size: 14px
+			color: #000000
+			&:before
+				background-color: $red
+				width: 28px !important
+				height: 28px !important
+		li.pick-sl
+			color: #fff
+			font-size: 14px !important
 
 @import "_media"
